[tool.poetry]
name = "kmua-quote-api"
version = "0.1.0"
description = ""
authors = ["krau <me@krau.top>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
pillow = "9.5.0"
pilmoji = "^2.0.4"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"
loguru = "^0.7.2"
dynaconf = "^3.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
